@@ -19,10 +19,6 @@
  */
 package org.xwiki.export.pdf.test.ui;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertTrue;
-
 import java.net.URL;
 import java.util.Arrays;
 import java.util.Collections;
@@ -31,7 +27,6 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.Callable;
-import java.util.stream.Collectors;
 
 import org.apache.commons.lang3.StringUtils;
 import org.junit.jupiter.api.BeforeAll;
@@ -60,6 +55,10 @@ import org.xwiki.test.ui.TestUtils;
 import org.xwiki.test.ui.po.LiveTableElement;
 import org.xwiki.test.ui.po.SuggestInputElement;
 import org.xwiki.test.ui.po.ViewPage;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 /**
  * Tests for PDF export.
@@ -109,14 +108,6 @@ class PDFExportIT
         // Restrict view access for guests in order to verify that the Chrome Docker container properly authenticates
         // the user (the authentication cookies are copied and updated to match the Chrome Docker container IP address).
         setup.setWikiPreference("authenticate_view", "1");
-
-        // Enable the 'org.xwiki.platform.html.head' UIXP which normally is provided by
-        // 'org.xwiki.platform:xwiki-platform-distribution-ui-base' but we didn't add it as a test dependency because it
-        // brings too many transitive dependencies that we don't need.
-        setup.setWikiPreference("meta",
-            "#foreach($uix in $services.uix.getExtensions(\"org.xwiki.platform.html.head\","
-                + " {'sortByParameter' : 'order'}))\n" + "  $services.rendering.render($uix.execute(), 'xhtml/1.0')\n"
-                + "#end");
 
         // Enable debug logs for the PDF export code.
         setup.gotoPage(new LocalDocumentReference("PDFExportIT", "EnableDebugLogs"), "get");
@@ -171,8 +162,9 @@ class PDFExportIT
             //
 
             String coverPageText = pdf.getTextFromPage(0);
-            assertTrue(coverPageText.startsWith("Parent\nVersion 1.1 authored by superadmin"),
-                "Unexpected cover page text: " + coverPageText);
+            assertTrue(coverPageText.startsWith("""
+                Parent
+                Version 1.1 authored by superadmin"""), "Unexpected cover page text: " + coverPageText);
 
             // Link to the author profile.
             Map<String, String> coverPageLinks = pdf.getLinksFromPage(0);
@@ -190,16 +182,19 @@ class PDFExportIT
             //
 
             String tocPageText = pdf.getTextFromPage(1);
-            assertTrue(tocPageText.contains("Table of Contents\nParent\nChapter 1\nChild\nSection 1\n"),
-                "Unexpected table of contents: " + tocPageText);
+            assertTrue(tocPageText.contains("""
+                Table of Contents
+                Parent
+                Chapter 1
+                Child
+                Section 1
+                """), "Unexpected table of contents: " + tocPageText);
 
             // The table of contents should have internal links (anchors) to each section.
             Map<String, String> tocPageLinks = pdf.getLinksFromPage(1);
             assertEquals(4, tocPageLinks.size());
-            assertEquals(
-                Arrays.asList("Hxwiki:PDFExportIT.Parent.WebHome", "HChapter1",
-                    "Hxwiki:PDFExportIT.Parent.Child.WebHome", "HSection1"),
-                tocPageLinks.values().stream().collect(Collectors.toList()));
+            assertEquals(Arrays.asList("Hxwiki:PDFExportIT.Parent.WebHome", "HChapter1",
+                "Hxwiki:PDFExportIT.Parent.Child.WebHome", "HSection1"), tocPageLinks.values().stream().toList());
 
             // No images on the table of contents page.
             assertEquals(0, pdf.getImagesFromPage(1).size());
@@ -209,12 +204,17 @@ class PDFExportIT
             //
 
             String contentPageText = pdf.getTextFromPage(2);
-            assertTrue(contentPageText.startsWith("Parent\n3 / 4\n"),
-                "Unexpected header and footer on the content page: " + contentPageText);
-            assertTrue(
-                contentPageText.contains("Parent\nChapter 1\n"
-                    + "Content of first chapter. Current user is xwiki:XWiki.John.\nLink to child page.\nloaded!\n"),
-                "Parent document content missing: " + contentPageText);
+            assertTrue(contentPageText.startsWith("""
+                Parent
+                3 / 4
+                """), "Unexpected header and footer on the content page: " + contentPageText);
+            assertTrue(contentPageText.contains("""
+                Parent
+                Chapter 1
+                Content of first chapter. Current user is xwiki:XWiki.John.
+                Link to child page.
+                loaded!
+                """), "Parent document content missing: " + contentPageText);
 
             // The content of the parent document has a link to the child document.
             Map<String, String> contentPageLinks = pdf.getLinksFromPage(2);
@@ -226,10 +226,15 @@ class PDFExportIT
             //
 
             contentPageText = pdf.getTextFromPage(3);
-            assertTrue(contentPageText.startsWith("Child\n4 / 4\n"),
-                "Unexpected header and footer on the content page: " + contentPageText);
-            assertTrue(contentPageText.contains("Child\nSection 1\nContent of first section.\n"),
-                "Child document content missing: " + contentPageText);
+            assertTrue(contentPageText.startsWith("""
+                Child
+                4 / 4
+                """), "Unexpected header and footer on the content page: " + contentPageText);
+            assertTrue(contentPageText.contains("""
+                Child
+                Section 1
+                Content of first section.
+                """), "Child document content missing: " + contentPageText);
 
             // The content of the child document shows the same image multiple times.
             List<PDFImage> contentPageImages = pdf.getImagesFromPage(3);
@@ -266,13 +271,14 @@ class PDFExportIT
 
             String tocPageText = pdf.getTextFromPage(1);
             // The document title is not included when a single page is exported.
-            assertTrue(tocPageText.contains("Table of Contents\nSection 1"),
-                "Unexpected table of contents: " + tocPageText);
+            assertTrue(tocPageText.contains("""
+                Table of Contents
+                Section 1"""), "Unexpected table of contents: " + tocPageText);
 
             // The table of contents should have internal links (anchors) to each section.
             Map<String, String> tocPageLinks = pdf.getLinksFromPage(1);
             assertEquals(Collections.singletonList("HSection1"),
-                tocPageLinks.values().stream().collect(Collectors.toList()));
+                tocPageLinks.values().stream().toList());
 
             //
             // Verify the content page.
@@ -280,8 +286,12 @@ class PDFExportIT
 
             String contentPageText = pdf.getTextFromPage(2);
             // The document title is not included when a single page is exported.
-            assertTrue(contentPageText.startsWith("Child\n3 / 3\nSection 1\nContent of first section.\n"),
-                "Unexpected content: " + contentPageText);
+            assertTrue(contentPageText.startsWith("""
+                Child
+                3 / 3
+                Section 1
+                Content of first section.
+                """), "Unexpected content: " + contentPageText);
         }
     }
 
@@ -342,8 +352,10 @@ class PDFExportIT
 
             // Verify the custom PDF header and footer.
             String contentPageText = pdf.getTextFromPage(2);
-            assertTrue(contentPageText.startsWith("Chapter: Parent\nPage 3 / 3\n"),
-                "Unexpected header and footer on the content page: " + contentPageText);
+            assertTrue(contentPageText.startsWith("""
+                Chapter: Parent
+                Page 3 / 3
+                """), "Unexpected header and footer on the content page: " + contentPageText);
         }
     }
 
@@ -394,9 +406,18 @@ class PDFExportIT
         try (PDFDocument pdf = exportOnlyContent(exportOptions, testConfiguration)) {
             assertEquals(3, pdf.getNumberOfPages());
             String pageText = pdf.getTextFromPage(0);
-            assertTrue(pageText.startsWith("Parent\nChapter 1\n"), "Unexpeced parent document content: " + pageText);
-            assertEquals("Hidden\nHidden content\n", pdf.getTextFromPage(1));
-            assertEquals("Grandchild\nOnce upon a time...\n", pdf.getTextFromPage(2));
+            assertTrue(pageText.startsWith("""
+                Parent
+                Chapter 1
+                """), "Unexpeced parent document content: " + pageText);
+            assertEquals("""
+                Hidden
+                Hidden content
+                """, pdf.getTextFromPage(1));
+            assertEquals("""
+                Grandchild
+                Once upon a time...
+                """, pdf.getTextFromPage(2));
         }
 
         // Restore the visibility of the grandchild page.
@@ -464,14 +485,18 @@ class PDFExportIT
 
             String tocPageText = pdf.getTextFromPage(1);
             // The document title is not included when a single page is exported.
-            assertTrue(tocPageText.contains("Table of Contents\nWithoutID\nDigitsAndSpace\nSymbols\nValid"),
-                "Unexpected table of contents: " + tocPageText);
+            assertTrue(tocPageText.contains("""
+                Table of Contents
+                WithoutID
+                DigitsAndSpace
+                Symbols
+                Valid"""), "Unexpected table of contents: " + tocPageText);
 
             // The table of contents should have internal links (anchors) to each section, provided the sections have a
             // valid id (otherwise the section title is displayed but without a link).
             Map<String, String> tocPageLinks = pdf.getLinksFromPage(1);
             assertEquals(Collections.singletonList("HValid"),
-                tocPageLinks.values().stream().collect(Collectors.toList()));
+                tocPageLinks.values().stream().toList());
 
             //
             // Verify the content page.
@@ -479,9 +504,13 @@ class PDFExportIT
 
             String contentPageText = pdf.getTextFromPage(2);
             // The document title is not included when a single page is exported.
-            assertTrue(
-                contentPageText.startsWith("InvalidTOCAnchors\n3 / 3\nWithoutID\nDigitsAndSpace\nSymbols\nValid"),
-                "Unexpected content: " + contentPageText);
+            assertTrue(contentPageText.startsWith("""
+                InvalidTOCAnchors
+                3 / 3
+                WithoutID
+                DigitsAndSpace
+                Symbols
+                Valid"""), "Unexpected content: " + contentPageText);
         }
     }
 
@@ -614,26 +643,55 @@ class PDFExportIT
             //
 
             String tocPageText = pdf.getTextFromPage(1);
-            assertTrue(
-                tocPageText.contains("Table of Contents\n" + "1 Heading 1\n" + "1.1 Heading 1-1\n"
-                    + "Heading without number\n" + "1.1.1 Heading 1-1-1\n" + "1.1.2 Heading 1-1-2\n"
-                    + "1.2 Heading 1-2\n" + "1.2.1 Heading 1-2-1\n" + "1.7 Heading 1-7\n" + "1.7.1 Heading 1-7-1\n"
-                    + "1.7.5 Heading 1-7-5\n" + "1.7.6 Heading 1-7-6\n" + "1.8 Heading 1-8\n" + "2 Heading 2\n"
-                    + "2.1 Heading 2-1\n" + "2.1.1 Heading 2-1-1\n" + ""),
-                "Unexpected table of contents: " + tocPageText);
+            assertTrue(tocPageText.contains("""
+                Table of Contents
+                1 Heading 1
+                1.1 Heading 1-1
+                Heading without number
+                1.1.1 Heading 1-1-1
+                1.1.2 Heading 1-1-2
+                1.2 Heading 1-2
+                1.2.1 Heading 1-2-1
+                1.7 Heading 1-7
+                1.7.1 Heading 1-7-1
+                1.7.5 Heading 1-7-5
+                1.7.6 Heading 1-7-6
+                1.8 Heading 1-8
+                2 Heading 2
+                2.1 Heading 2-1
+                2.1.1 Heading 2-1-1
+                """), "Unexpected table of contents: " + tocPageText);
 
             //
             // Verify the content page.
             //
 
             String contentPageText = pdf.getTextFromPage(2);
-            assertEquals("NumberedHeadings\n" + "3 / 3\n" + "1 Heading 1\n" + "1.1 Heading 1-1\n"
-                + "Heading without number\n" + "1.1.1 Heading 1-1-1\n" + "1.1.2 Heading 1-1-2\n" + "1.2 Heading 1-2\n"
-                + "1.2.1 Heading 1-2-1\n" + "1.2.1.1 Heading 1-2-1-1\n" + "1.2.1.2 Heading 1-2-1-2\n"
-                + "1.7 Heading 1-7\n" + "1.7.1 Heading 1-7-1\n" + "1.7.5 Heading 1-7-5\n" + "1.7.6 Heading 1-7-6\n"
-                + "1.8 Heading 1-8\n" + "2 Heading 2\n" + "2.1 Heading 2-1\n" + "2.1.1 Heading 2-1-1\n"
-                + "2.1.1.1 Heading 2-1-1-1\n" + "2.1.1.1.1 Heading 2-1-1-1-1\n" + "2.1.1.1.1.1 Heading 2-1-1-1-1-1\n"
-                + "2.1.1.1.1.2 Heading 2-1-1-1-1-2\n", contentPageText);
+            assertEquals("""
+                NumberedHeadings
+                3 / 3
+                1\u00A0Heading 1
+                1.1\u00A0Heading 1-1
+                Heading without number
+                1.1.1\u00A0Heading 1-1-1
+                1.1.2\u00A0Heading 1-1-2
+                1.2\u00A0Heading 1-2
+                1.2.1\u00A0Heading 1-2-1
+                1.2.1.1\u00A0Heading 1-2-1-1
+                1.2.1.2\u00A0Heading 1-2-1-2
+                1.7\u00A0Heading 1-7
+                1.7.1\u00A0Heading 1-7-1
+                1.7.5\u00A0Heading 1-7-5
+                1.7.6\u00A0Heading 1-7-6
+                1.8\u00A0Heading 1-8
+                2\u00A0Heading 2
+                2.1\u00A0Heading 2-1
+                2.1.1\u00A0Heading 2-1-1
+                2.1.1.1\u00A0Heading 2-1-1-1
+                2.1.1.1.1\u00A0Heading 2-1-1-1-1
+                2.1.1.1.1.1\u00A0Heading 2-1-1-1-1-1
+                2.1.1.1.1.2\u00A0Heading 2-1-1-1-1-2
+                """, contentPageText);
         }
     }
 
@@ -649,9 +707,24 @@ class PDFExportIT
             assertEquals(2, pdf.getNumberOfPages());
 
             String content = pdf.getTextFromPage(1);
-            assertEquals("FormFields\n2 / 2\n" + "Title modified\n" + " Blue  Yellow  Red\n" + "Paris\n"
-                + "Comedy\nDrama\nRomance\n" + "description modified\n" + "Submit\n" + "TITLE\n" + " ENABLED\n"
-                + "COLOR\n" + "CITY\n" + "GENRE\n" + "DESCRIPTION\n", content);
+            assertEquals("""
+                FormFields
+                2 / 2
+                Title modified
+                 Blue  Yellow  Red
+                Paris
+                Comedy
+                Drama
+                Romance
+                description modified
+                Submit
+                Title
+                 Enabled
+                Color
+                City
+                Genre
+                Description
+                """, content);
         }
     }
 
@@ -680,10 +753,11 @@ class PDFExportIT
 
             String content = pdf.getTextFromPage(1);
             // Verify the pagination (result count), the headers and the filters.
-            assertTrue(
-                content
-                    .contains("Results 1 - 2 out of 2 per page of 15\nPage Location Date Last Author Actions\nlive\n"),
-                "Unexpected content: " + content);
+            assertTrue(content.contains("""
+                Results 1 - 2 out of 2 per page of 15
+                Page Location Date Last Author Actions
+                live
+                """), "Unexpected content: " + content);
             // Verify the results and the order.
             // Depending on the screen width the text from the live table cells might be wrapped on multiple lines,
             // which translates to new lines in the PDF text as well. For this reason we need to do the lookup ignoring
@@ -795,28 +869,37 @@ class PDFExportIT
             //
 
             String coverPageText = pdf.getTextFromPage(0);
-            assertTrue(coverPageText.startsWith("Parent Initial Title\nVersion 1.1 authored by John"),
-                "Unexpected cover page text: " + coverPageText);
+            assertTrue(coverPageText.startsWith("""
+                Parent Initial Title
+                Version 1.1 authored by John"""), "Unexpected cover page text: " + coverPageText);
 
             //
             // Verify the page corresponding to the parent document.
             //
 
             String contentPageText = pdf.getTextFromPage(2);
-            assertTrue(contentPageText.startsWith("Parent Initial Title\n3 / 4\n"),
-                "Unexpected header and footer on the content page: " + contentPageText);
-            assertTrue(contentPageText.contains("Parent Initial Title\nParent initial content.\n"),
-                "Unexpected parent page content: " + contentPageText);
+            assertTrue(contentPageText.startsWith("""
+                Parent Initial Title
+                3 / 4
+                """), "Unexpected header and footer on the content page: " + contentPageText);
+            assertTrue(contentPageText.contains("""
+                Parent Initial Title
+                Parent initial content.
+                """), "Unexpected parent page content: " + contentPageText);
 
             //
             // Verify the page corresponding to the child document.
             //
 
             contentPageText = pdf.getTextFromPage(3);
-            assertTrue(contentPageText.startsWith("Child Modified Title\n4 / 4\n"),
-                "Unexpected header and footer on the content page: " + contentPageText);
-            assertTrue(contentPageText.contains("Child Modified Title\nChild modified content.\n"),
-                "Unexpected child page content: " + contentPageText);
+            assertTrue(contentPageText.startsWith("""
+                Child Modified Title
+                4 / 4
+                """), "Unexpected header and footer on the content page: " + contentPageText);
+            assertTrue(contentPageText.contains("""
+                Child Modified Title
+                Child modified content.
+                """), "Unexpected child page content: " + contentPageText);
         }
     }
 
@@ -836,8 +919,12 @@ class PDFExportIT
 
                 // Verify the content page.
                 String contentPageText = pdf.getTextFromPage(2);
-                assertTrue(contentPageText.startsWith("Child\n3 / 3\nSection 1\nContent of first section.\n"),
-                    "Unexpected content: " + contentPageText);
+                assertTrue(contentPageText.startsWith("""
+                    Child
+                    3 / 3
+                    Section 1
+                    Content of first section.
+                    """), "Unexpected content: " + contentPageText);
             }
 
             return null;
@@ -875,11 +962,15 @@ class PDFExportIT
 
             // Verify the cover page.
             String coverPageText = pdf.getTextFromPage(0);
-            assertTrue(coverPageText.startsWith("Child\nVersion 1.1 authored by superadmin"),
-                "Unexpected cover page text: " + coverPageText);
+            assertTrue(coverPageText.startsWith("""
+                Child
+                Version 1.1 authored by superadmin"""), "Unexpected cover page text: " + coverPageText);
 
             // Verify the content page.
-            assertEquals("Section 1\nContent of first section.\n", pdf.getTextFromPage(1));
+            assertEquals("""
+                Section 1
+                Content of first section.
+                """, pdf.getTextFromPage(1));
         }
     }
 
@@ -919,10 +1010,10 @@ class PDFExportIT
 
             // The paragraph after the image should be on the same page.
             String text = pdf.getTextFromPage(2);
-            assertTrue(
-                text.startsWith(
-                    "Floating Image\n3 / 7\n" + "Donec sed ante interdum, finibus urna eget, ultricies purus."),
-                "Unexpected content: " + text);
+            assertTrue(text.startsWith("""
+                Floating Image
+                3 / 7
+                Donec sed ante interdum, finibus urna eget, ultricies purus."""), "Unexpected content: " + text);
 
             //
             // Third content page.
@@ -931,10 +1022,10 @@ class PDFExportIT
             // The third content page should have the second floating image.
             images = pdf.getImagesFromPage(3);
             assertEquals(1, images.size());
-            assertEquals(442, Math.round(images.get(0).getHeight()));
+            assertEquals(443, Math.round(images.get(0).getHeight()));
 
             // The second image is floating to the right.
-            assertEquals(403, Math.round(images.get(0).getOffsetLeft()));
+            assertEquals(404, Math.round(images.get(0).getOffsetLeft()));
 
             // The paragraph after the image should be on the same page.
             text = pdf.getTextFromPage(3);
@@ -949,7 +1040,7 @@ class PDFExportIT
             // The fifth (should have been the fourth) content page has the third floating image.
             images = pdf.getImagesFromPage(5);
             assertEquals(1, images.size());
-            assertEquals(457, Math.round(images.get(0).getHeight()));
+            assertEquals(458, Math.round(images.get(0).getHeight()));
 
             // The third image is floating to the left.
             assertEquals(36, Math.round(images.get(0).getOffsetLeft()));
@@ -975,9 +1066,18 @@ class PDFExportIT
             // We should have 4 pages: the cover page and 3 content pages.
             assertEquals(4, pdf.getNumberOfPages());
 
-            String firstPageContent = pdf.getTextFromPage(1).substring("LongTableCell\n2 / 4\n".length());
-            String secondPageContent = pdf.getTextFromPage(2).substring("LongTableCell\n3 / 4\n".length());
-            String thirdPageContent = pdf.getTextFromPage(3).substring("LongTableCell\n4 / 4\n".length());
+            String firstPageContent = pdf.getTextFromPage(1).substring("""
+                LongTableCell
+                2 / 4
+                """.length());
+            String secondPageContent = pdf.getTextFromPage(2).substring("""
+                LongTableCell
+                3 / 4
+                """.length());
+            String thirdPageContent = pdf.getTextFromPage(3).substring("""
+                LongTableCell
+                4 / 4
+                """.length());
 
             // Verify that we don't lose content when a long table cell is split between multiple print pages.
             String fragment = firstPageContent.substring(firstPageContent.length() - 40, firstPageContent.length())
@@ -1061,8 +1161,10 @@ class PDFExportIT
 
             // Verify the tags are displayed in the footer of the content page.
             String contentPageText = pdf.getTextFromPage(2);
-            assertTrue(contentPageText.startsWith("Parent\nTags: science, technology 3 / 3\n"),
-                "Unexpected header and footer on the content page: " + contentPageText);
+            assertTrue(contentPageText.startsWith("""
+                Parent
+                Tags: science, technology 3 / 3
+                """), "Unexpected header and footer on the content page: " + contentPageText);
         }
     }
 
@@ -1093,13 +1195,17 @@ class PDFExportIT
 
             // Verify the page corresponding to the parent document.
             String contentPageText = pdf.getTextFromPage(2);
-            assertTrue(contentPageText.startsWith("Parent\nTags: science, technology 3 / 4\n"),
-                "Unexpected header and footer on the content page: " + contentPageText);
+            assertTrue(contentPageText.startsWith("""
+                Parent
+                Tags: science, technology 3 / 4
+                """), "Unexpected header and footer on the content page: " + contentPageText);
 
             // Verify the page corresponding to the child document.
             contentPageText = pdf.getTextFromPage(3);
-            assertTrue(contentPageText.startsWith("Child\nTags: biology, ecology 4 / 4\n"),
-                "Unexpected header and footer on the content page: " + contentPageText);
+            assertTrue(contentPageText.startsWith("""
+                Child
+                Tags: biology, ecology 4 / 4
+                """), "Unexpected header and footer on the content page: " + contentPageText);
         }
     }
 
@@ -1124,13 +1230,26 @@ class PDFExportIT
 
             // Verify the page corresponding to the parent document.
             String contentPageText = pdf.getTextFromPage(2);
-            assertEquals("Title: Parent\n3 / 4\nTitle: Parent\nContent:\nChapter 1\n"
-                + "Content of first chapter. Current user is xwiki:XWiki.John.\nLink to child page.\nloaded!\n",
-                contentPageText);
+            assertEquals("""
+                Title: Parent
+                3 / 4
+                Title: Parent
+                Content:
+                Chapter 1
+                Content of first chapter. Current user is xwiki:XWiki.John.
+                Link to child page.
+                loaded!
+                """, contentPageText);
 
             // Verify the page corresponding to the child document.
             contentPageText = pdf.getTextFromPage(3);
-            assertEquals("Child\n4 / 4\nChild\nSection 1\nContent of first section.\n", contentPageText);
+            assertEquals("""
+                Child
+                4 / 4
+                Child
+                Section 1
+                Content of first section.
+                """, contentPageText);
         }
     }
 
@@ -1157,7 +1276,11 @@ class PDFExportIT
             assertEquals(3, pdf.getNumberOfPages());
 
             // Verify the text from the content page.
-            assertEquals("OfficeMacro\n3 / 3\nThis is a word with image\n", pdf.getTextFromPage(2));
+            assertEquals("""
+                OfficeMacro
+                3 / 3
+                This is a word with image
+                """, pdf.getTextFromPage(2));
 
             // Verify that the images are present.
             List<PDFImage> images = pdf.getImagesFromPage(2);
@@ -1188,7 +1311,11 @@ class PDFExportIT
             assertEquals(2, pdf.getNumberOfPages());
 
             // Verify the text from the content page.
-            assertEquals("A&B=C\n2 / 2\nPage with & in title.\n", pdf.getTextFromPage(1));
+            assertEquals("""
+                A&B=C
+                2 / 2
+                Page with & in title.
+                """, pdf.getTextFromPage(1));
         }
     }
 
@@ -1213,15 +1340,36 @@ class PDFExportIT
 
             // Verify the order of the exported wiki pages in the table of contents.
             String tocText = pdf.getTextFromPage(1);
-            assertTrue(
-                tocText.contains(
-                    "Table of Contents\nPinnedPages\nBob\nAssignments\nProfile\nCarol\nAlice\nProfile\nAssignments\n"),
-                "Unexpected table of contents: " + tocText);
+            assertTrue(tocText.contains("""
+                Table of Contents
+                PinnedPages
+                Bob
+                Assignments
+                Profile
+                Carol
+                Alice
+                Profile
+                Assignments
+                """), "Unexpected table of contents: " + tocText);
         }
     }
 
     @Test
     @Order(27)
+    void missingStyleSheet(TestUtils setup, TestReference testReference, TestConfiguration testConfiguration)
+        throws Exception
+    {
+        ViewPage viewPage = setup.gotoPage(new LocalDocumentReference("PDFExportIT", "MissingStyleSheet"));
+        PDFExportOptionsModal exportOptions = PDFExportOptionsModal.open(viewPage);
+        try (PDFDocument pdf = export(exportOptions, testConfiguration)) {
+            // We should have 2 pages: cover page and one content page.
+            assertEquals(2, pdf.getNumberOfPages());
+            assertEquals("MissingStyleSheet\n2 / 2\nSome content.\n", pdf.getTextFromPage(1));
+        }
+    }
+
+    @Test
+    @Order(28)
     void pageTranslations(TestUtils setup, TestReference testReference, TestConfiguration testConfiguration)
         throws Exception
     {
@@ -1259,15 +1407,28 @@ class PDFExportIT
 
             // Verify the table of contents.
             text = pdf.getTextFromPage(1);
-            assertTrue(text.contains("Table des matières\nTraductions de pages\nTitre niveau un\nEnfant"),
-                "Unexpected table of contents: " + text);
+            assertTrue(text.contains("""
+                Table des matières
+                Traductions de pages
+                Titre niveau un
+                Enfant"""), "Unexpected table of contents: " + text);
 
             // Verify the parent page.
-            assertEquals("Traductions de pages\n3 / 4\nTraductions de pages\nTitre niveau un\n"
-                + "Ce contenu est traduit en plusieurs langues.\n", pdf.getTextFromPage(2));
+            assertEquals("""
+                Traductions de pages
+                3 / 4
+                Traductions de pages
+                Titre niveau un
+                Ce contenu est traduit en plusieurs langues.
+                """, pdf.getTextFromPage(2));
 
             // Verify the child page.
-            assertEquals("Enfant\n4 / 4\nEnfant\nCeci est une page enfant.\n", pdf.getTextFromPage(3));
+            assertEquals("""
+                Enfant
+                4 / 4
+                Enfant
+                Ceci est une page enfant.
+                """, pdf.getTextFromPage(3));
         }
 
         // Verify that the current locale hasn't changed.
@@ -1284,19 +1445,129 @@ class PDFExportIT
 
             // Verify the cover page.
             String text = pdf.getTextFromPage(0);
-            assertTrue(text.startsWith("Page Translations\nVersion 1.1 verfasst von"),
-                "Unexpected cover page: " + text);
+            assertTrue(text.startsWith("""
+                Page Translations
+                Version 1.1 verfasst von"""), "Unexpected cover page: " + text);
 
             // Verify the table of contents.
             text = pdf.getTextFromPage(1);
-            assertTrue(text.contains("Inhaltsverzeichnis\nHeading Level One"),
-                "Unexpected table of contents: " + text);
+            assertTrue(text.contains("""
+                Inhaltsverzeichnis
+                Heading Level One"""), "Unexpected table of contents: " + text);
 
             // Verify the parent page.
-            assertEquals(
-                "Page Translations\n3 / 3\nHeading Level One\nThis content is translated in multiple languages.\n",
-                pdf.getTextFromPage(2));
+            assertEquals("""
+                Page Translations
+                3 / 3
+                Heading Level One
+                This content is translated in multiple languages.
+                """, pdf.getTextFromPage(2));
         }
+    }
+
+    @Test
+    @Order(29)
+    void simulateLongPDFExport(TestUtils setup, TestConfiguration testConfiguration) throws Exception
+    {
+        // Disable multilingual mode from the previous test.
+        setup.loginAsSuperAdmin();
+        setMultiLingual(false, "en");
+
+        // Get back to the simple user login.
+        setup.login("John", "pass");
+
+        setup.gotoPage(new LocalDocumentReference("PDFExportIT", "DelayedPageReady"), "view", "delay=23");
+        // We delayed the page ready in order to simulate a long PDF export, but we don't want to wait when viewing the
+        // page. We want to trigger the export right away.
+        markPageReady(setup);
+        PDFExportOptionsModal exportOptions = PDFExportOptionsModal.open(new ViewPage());
+        try (PDFDocument pdf = export(exportOptions, testConfiguration)) {
+            // We should have 2 pages: cover page and one content page.
+            assertEquals(2, pdf.getNumberOfPages());
+            assertEquals("DelayedPageReady\n2 / 2\nTest content.\n", pdf.getTextFromPage(1));
+        }
+    }
+
+    @Test
+    @Order(30)
+    void cancelWhileWaitingForPageToBeReady(TestUtils setup, TestConfiguration testConfiguration) throws Exception
+    {
+        setup.gotoPage(new LocalDocumentReference("PDFExportIT", "DelayedPageReady"), "view", "delay=17");
+        // We delayed the page ready in order to simulate a long PDF export, but we don't want to wait when viewing the
+        // page. We want to trigger the export right away.
+        markPageReady(setup);
+        ViewPage viewPage = new ViewPage();
+        PDFExportOptionsModal exportOptions = PDFExportOptionsModal.open(viewPage);
+
+        // Trigger the export without waiting for the PDF file to be generated because we want to cancel the export.
+        exportOptions.triggerExport();
+
+        // Wait a bit to avoid canceling the export too early. We want to cancel it while the PDF export
+        // is waiting for the page to be ready because we want to check that the PDF export is stopped before the page
+        // ready timeout is reached (60 seconds by default). The content of the exported page is very simple, so it
+        // should reach fast enough the point where it waits for the web page to be ready.
+        Thread.sleep(3000);
+
+        // Cancel the export.
+        exportOptions.cancel();
+
+        // Close the modal.
+        exportOptions.close();
+    }
+
+    @Test
+    @Order(31)
+    void stopChromeWhileWaitingForPageToBeReady(TestUtils setup, TestConfiguration testConfiguration) throws Exception
+    {
+        // Reduce the page ready timeout to 10 seconds in order to check that the PDF export is aborted when it takes
+        // too long, even if the Chrome Docker container is stopped (or not responding).
+        setup.loginAsSuperAdmin();
+        PDFExportAdministrationSectionPage adminSection = PDFExportAdministrationSectionPage.gotoPage();
+        adminSection.setPageReadyTimeout("10");
+        adminSection.clickSave();
+
+        setup.loginAndGotoPage("John", "pass",
+            setup.getURL(new LocalDocumentReference("PDFExportIT", "DelayedPageReady"), "view", "delay=8"));
+        // We delayed the page ready in order to simulate a long PDF export, but we don't want to wait when viewing the
+        // page. We want to trigger the export right away.
+        markPageReady(setup);
+        ViewPage viewPage = new ViewPage();
+        PDFExportOptionsModal exportOptions = PDFExportOptionsModal.open(viewPage);
+
+        // Trigger the export, without waiting for the PDF file to be generated because we want to stop the Chrome
+        // Docker container and check if the page ready timeout is respected.
+        exportOptions.triggerExport();
+
+        // Wait a bit to avoid stopping the Chrome Docker container too early. We want to stop it while the PDF export
+        // is waiting for the page to be ready (otherwise we don't reproduce the hanging). The content of the exported
+        // page is very simple, so it should reach fast enough the point where it waits for the web page to be ready.
+        Thread.sleep(3000);
+
+        // Stop the Chrome Docker container.
+        DockerTestUtils.cleanupContainersWithLabels(ContainerManager.DEFAULT_LABELS);
+
+        viewPage.waitForNotificationErrorMessage("Failed to export as PDF: The connection has been closed.");
+    }
+
+    @Test
+    @Order(32)
+    void lazyLoadedImage(TestUtils setup, TestConfiguration testConfiguration) throws Exception
+    {
+        ViewPage viewPage = setup.gotoPage(new LocalDocumentReference("PDFExportIT", "LazyLoadedImage"));
+        PDFExportOptionsModal exportOptions = PDFExportOptionsModal.open(viewPage);
+        try (PDFDocument pdf = export(exportOptions, testConfiguration)) {
+            // We should have 3 pages: cover page and 2 content pages.
+            assertEquals(3, pdf.getNumberOfPages());
+            assertEquals("LazyLoadedImage\n3 / 3\nsecond \u00A0page\n", pdf.getTextFromPage(2));
+            List<PDFImage> images = pdf.getImagesFromPage(2);
+            assertEquals(1, images.size());
+            assertEquals(512, images.get(0).getRawWidth());
+        }
+    }
+
+    private void markPageReady(TestUtils setup)
+    {
+        setup.getDriver().executeScript("document.documentElement.dataset.xwikiPageReady = 'true';");
     }
 
     private void setMultiLingual(boolean isMultiLingual, String... supportedLanguages)
@@ -1305,7 +1576,9 @@ class PDFExportIT
         LocalizationAdministrationSectionPage sectionPage = adminPage.clickLocalizationSection();
         sectionPage.setMultiLingual(isMultiLingual);
         sectionPage.setDefaultLanguage("en");
-        sectionPage.setSupportedLanguages(Arrays.asList(supportedLanguages));
+        if (isMultiLingual) {
+            sectionPage.setSupportedLanguages(Arrays.asList(supportedLanguages));
+        }
         sectionPage.clickSave();
     }
 
