@@ -21,9 +21,9 @@ package org.xwiki.realtime.wysiwyg.test.po;
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
+import java.util.function.IntConsumer;
 
-import org.apache.commons.lang3.StringUtils;
+import org.apache.commons.lang3.Strings;
 import org.openqa.selenium.By;
 import org.openqa.selenium.Point;
 import org.openqa.selenium.StaleElementReferenceException;
@@ -65,17 +65,17 @@ public class RealtimeRichTextAreaElement extends RichTextAreaElement
 
         public String getCoeditorId()
         {
-            return StringUtils.removeStart(id, "rt-user-");
+            return Strings.CS.removeStart(id, "rt-user-");
         }
 
         public String getAvatarURL()
         {
-            return getFromEditedContent(() -> getContainer().getAttribute("src"));
+            return getFromEditedContent(() -> getContainer().getDomAttribute("src"));
         }
 
         public String getAvatarHint()
         {
-            return getFromEditedContent(() -> getContainer().getAttribute("title"));
+            return getFromEditedContent(() -> getContainer().getDomAttribute("title"));
         }
 
         public Point getLocation()
@@ -137,8 +137,8 @@ public class RealtimeRichTextAreaElement extends RichTextAreaElement
      */
     public List<CoeditorPosition> getCoeditorPositions()
     {
-        return getFromEditedContent(() -> getDriver().findElementsWithoutWaiting(By.className("rt-user-position")).stream()
-            .map(element -> element.getAttribute("id")).map(CoeditorPosition::new).collect(Collectors.toList()));
+        return getFromEditedContent(() -> getDriver().findElementsWithoutWaiting(By.className("realtime-user-position"))
+            .stream().map(element -> element.getDomAttribute("id")).map(CoeditorPosition::new).toList());
     }
 
     /**
@@ -148,5 +148,88 @@ public class RealtimeRichTextAreaElement extends RichTextAreaElement
     public CoeditorPosition getCoeditorPosition(String coeditorId)
     {
         return new CoeditorPosition("rt-user-" + coeditorId, true);
+    }
+
+    @Override
+    public void waitUntilTextContains(String textFragment)
+    {
+        repeatedWait(timeout -> waitUntilTextContains(textFragment, timeout));
+    }
+
+    @Override
+    public void waitUntilContentContains(String html)
+    {
+        repeatedWait(timeout -> waitUntilContentContains(html, timeout));
+    }
+
+    /**
+     * Wait for local changes to be pushed to the server. This only guarantees that the server has aknowledged receiving
+     * the changes, not that other users have received them. Use this in tests when you need to force a specific order
+     * of changes.
+     *
+     * @since 17.8.0
+     * @since 17.4.5
+     * @since 16.10.12
+     */
+    public void waitUntilLocalChangesArePushed()
+    {
+        StringBuilder script = new StringBuilder();
+        script.append("const name = arguments[0];\n");
+        script.append("const callback = arguments[1];\n");
+        script.append("const editor = CKEDITOR.instances[name]._realtime.editor;\n");
+        // Commit local changes, push to the server and wait for aknowledgement.
+        script.append("editor._flushUncommittedWork().finally(callback);\n");
+
+        getDriver().executeAsyncScript(script.toString(), this.editor.getName());
+    }
+
+    /**
+     * When testing realtime editing we often need to switch between the browser tabs. The problem is that browsers are
+     * throttling (slowing down) timers in inactive tabs, and sometimes they can even suspend the inactive tabs. This
+     * means we can have a situation where the test is switching the tab very fast, immediately after typing something
+     * in the rich text area, before the change event is handled, so before the change is propagated to the other users.
+     * Waiting on the other tab for the change to arrive can lead to a timeout in this case. The overcome this problem
+     * we use this strategy:
+     * <ul>
+     * <li>wait for a short period of time (a fraction of the default timeout, e.g. 2s instead of 10)</li>
+     * <li>temporarily reactivate each of the existing browser tabs by switching to each of them (to give them a chance
+     * to process the change)</li>
+     * <li>go back to the initial tab and repeat</li>
+     * </ul>
+     * Alternatively we could have waited for each change to be propagated when it happened (e.g. each time the user
+     * typed something) but we felt this was reducing the realtime editing aspect (making it more a turn-based editing).
+     * 
+     * @param wait the wait to perform
+     */
+    private void repeatedWait(IntConsumer wait)
+    {
+        int interval = 2;
+        int repetitions = 5;
+        for (int i = 0; i < repetitions - 1; i++) {
+            try {
+                wait.accept(interval);
+                return;
+            } catch (Exception e) {
+                // Ignore the exception and try again after reactivating each of the browser windows.
+            }
+            reactivateEachBrowserWindow();
+        }
+        wait.accept(interval);
+    }
+
+    private void reactivateEachBrowserWindow()
+    {
+        String initialHandle = getDriver().getWindowHandle();
+        getDriver().getWindowHandles().forEach(handle -> {
+            if (!handle.equals(initialHandle)) {
+                getDriver().switchTo().window(handle);
+                try {
+                    Thread.sleep(100);
+                } catch (InterruptedException e) {
+                    Thread.currentThread().interrupt();
+                }
+            }
+        });
+        getDriver().switchTo().window(initialHandle);
     }
 }
